3.1.7-dev (unreleased)
-----
LIMS-1546: Sampling Round Template Creation and Edit view
LIMS-1574: Fixed AR and Analysis attachments
LIMS-1670: Fixed windows incompatibility in TAL (referencewidget.pt)
LIMS-1594: Added option to select landing page for clients in configuration registry
LIMS-1594: Re-ordered tabs on Client home page
LIMS-1520: Allow to invalidate verified ARs
LIMS-1539: Printable Worksheets. In both AR by row or column orientations
LIMS-1199: Worksheet totals in WS lists
LIMS-257: Set Blank and Warning icons in Reference Sample main view
LIMS-1636: Batch Sample View crash
LIMS-1524: Invalidate email does not have variables populated
LIMS-1572: Instrument interface: Sysmex XS-500i
LIMS-1575: Thermo Arena 20XT
LIMS-1423: Save details when AR workflow action kicked off
LIMS-1624: Import default test.xlsx fails
LIMS-1614: Error when selecting Analysis Administration Tab after receiving a sample with Sampling Workflow enabled
LIMS-1605: Tescan TIMA interface
LIMS-1604: BioDrop uLite interface
LIMS-1603: Life Technologies Qubit interface
LIMS-1517: Storage field tag untranslated?
LIMS-1518: Storage Location table
LIMS-1527: CC Contact on AR view (edit) offers all contacts in system
LIMS-1536: Add button [Add], to alow quickly addings in referencewidget
LIMS-1587: Better support for extension of custom sample labels
LIMS-1622: Version Check does not correctly check cache
LIMS-1623: Implement bika-frontpage as a BrowserView


3.1.6 (2014-12-17)
------------------
LIMS-1530: Scrambled Analysis Category order in Published Results
LIMS-1529: Error while inserting an AR with container-based partitioning is required
LIMS-1460: Additional field in AR for comments or results interpretation
LIMS-1441: An error message related to partitions unit is shown when selecting analysis during AR creation
LIMS-1470: AS Setup. File attachment field tag is missing
LIMS-1422: Results doesn't display yes/no once verified but 1 or 0
LIMS-1486: Typos in instrument messages