@@ -69,6 +69,15 @@
 
     <browser:page
       for="bika.lims.interfaces.IClient"
+      name="srtemplates"
+      class="bika.lims.browser.client.ClientSRTemplatesView"
+      permission="zope2.View"
+      layer="bika.lims.interfaces.IBikaLIMS"
+    />
+
+
+    <browser:page
+      for="bika.lims.interfaces.IClient"
       name="samplepoints"
       class="bika.lims.browser.client.ClientSamplePointsView"
       permission="zope2.View"
